--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,10 @@
 [build]
 command = "npm run build"
-publish = ".next"
+publish = "out"
 
 [build.environment]
 NODE_VERSION = "18"
-NEXT_USE_NETLIFY_EDGE = "true"
+NEXT_TELEMETRY_DISABLED = "1"
+
+[[plugins]]
+package = "@netlify/plugin-nextjs"
